--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,15 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'io.supercharge:shimmerlayout:2.1.0'
 
 //    Libs
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'me.relex:circleindicator:2.1.6'
 //    implementation 'com.github.Jay-Goo:RangeSeekBar:v3.0.0'
+
+    implementation 'com.google.android.gms:play-services-maps:18.1.0' // Hoặc phiên bản mới nhất
+    implementation 'com.google.android.gms:play-services-location:21.0.1' // Kiểm tra phiên bản mới nhất
+
 }
