--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0' // Hoặc phiên bản mới nhất
     implementation 'com.google.android.gms:play-services-location:21.0.1' // Kiểm tra phiên bản mới nhất
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
